--- a/docs/01.指南/01.指南/01.简介.md
+++ b/docs/01.指南/01.指南/01.简介.md
@@ -5,8 +5,8 @@ permalink: /pages/a2f161
 article: false
 ---
 
-API 开发者文档是[API 接口服务平台](https://doc.suki.vin/)
-的一个接口调用工具包，通过[API-SDK](https://github.com/qimu666/api-sdk)
+API 开发者文档是[API 接口服务平台](https://api.suki.vin/)
+的一个接口调用工具包，通过[API-SDK](https://github.com/haiqing102/API-sdk)
 即可将轻松、稳定、安全的集成接口到您的项目中，实现更高效的开发和调用。
 帮助您实现更快速、便捷的开发和调用体验。
 
@@ -20,7 +20,7 @@ API 开发者文档是[API 接口服务平台](https://doc.suki.vin/)
 
 ## 🌐 官网地址
 
-[API 接口服务平台](https://doc.suki.vin/)
+[API 接口服务平台](https://api.suki.vin/)
 
 ## 😎 我们的优势
 
