--- a/docs/01.指南/01.指南/03.快速开始.md
+++ b/docs/01.指南/01.指南/03.快速开始.md
@@ -19,28 +19,16 @@ article: false
 
 ```xml
 <dependency>
-    <groupId>icu.qimuu</groupId>
+    <groupId>vin.suki</groupId>
     <artifactId>api-sdk</artifactId>
-    <version>0.0.4</version>
+    <version>1.0</version>
 </dependency>
 ```
-
-**可以搭配[EasyWeb](https://github.com/qimu666/EasyWeb)依赖快速启动 Web 项目 (可选)**
-
-```xml
-<dependency>
-    <groupId>icu.qimuu</groupId>
-    <artifactId>EasyWeb</artifactId>
-    <version>0.0.6</version>
-</dependency>
-```
-
-💥 在新的版本从 0.0.6 开始，您无需任何配置即可使用 Knife4j 接口文档，自定义错误码和全局异常处理器， 您将感觉不到 EasyWeb 的存在。
 
 ### 🍐 Gradle
 
 ```
-implementation group: 'icu.qimuu', name: 'api-sdk', version: '0.0.4'
+implementation group: 'vin.suki', name: 'api-sdk', version: '1.0'
 ```
 
 ::: tip 提示 🔔️
@@ -49,7 +37,7 @@ implementation group: 'icu.qimuu', name: 'api-sdk', version: '0.0.4'
 
 ### ⚙️ 配置客户端
 
-#### 1. 前往[API 接口服务平台](https://api.qimuu.icu/account/center) 获取开发者密钥对
+#### 1. 前往[API 接口服务平台](https://api.suki.vin/account/center) 获取开发者密钥对
 
 #### 2. 初始化客户端 ApiClient 对象
 
@@ -67,18 +55,17 @@ implementation group: 'icu.qimuu', name: 'api-sdk', version: '0.0.4'
 
     ```yml
     # API 配置
-    qi:
-      api:
-        client:
-          access-key: 你的 accessKey
-          secret-key: 你的 secretKey
+    api:
+      client:
+        access-key: 你的 accessKey
+        secret-key: 你的 secretKey
     ```
 
   - properties
 
     ```properties
-    qi.api.client.access-key=你的 accessKey
-    qi.api.client.secret-key=你的 secretKey
+    api.client.access-key=你的 accessKey
+    api.client.secret-key=你的 secretKey
     ```
 
 #### 3. 使用 API 服务
@@ -90,7 +77,7 @@ implementation group: 'icu.qimuu', name: 'api-sdk', version: '0.0.4'
 
 #### 4. 发起请求示例
 
-示例：随机毒鸡汤
+示例：诙谐语录
 
 - 示例一 ：**通过配置文件 推荐 👍**
 
@@ -107,8 +94,8 @@ try {
 
 ```java
 try {
-    ApiClient qiApiClient = new ApiClient("你的 accessKey", "你的 secretKey");
-    PoisonousChickenSoupResponse poisonousChickenSoup = apiService.getPoisonousChickenSoup(qiApiClient);
+    ApiClient ApiClient = new ApiClient("你的 accessKey", "你的 secretKey");
+    PoisonousChickenSoupResponse poisonousChickenSoup = apiService.getPoisonousChickenSoup(ApiClient);
     System.out.println("poisonousChickenSoup = " + poisonousChickenSoup);
 } catch (ApiException e) {
     log.error(e.getMessage());
@@ -120,32 +107,5 @@ try {
 ```json
 {
   "text": "不知道你混什么圈，反正我的是混黑眼圈。"
-}
-```
-
-**搭配[EasyWeb](https://github.com/qimu666/EasyWeb)示例：推荐 👍**
-
-```java
-@GetMapping("/getPoisonousChickenSoup")
-public BaseResponse<PoisonousChickenSoupResponse> getPoisonousChickenSoup() {
-    PoisonousChickenSoupResponse poisonousChickenSoup = null;
-    try {
-        poisonousChickenSoup = apiService.getPoisonousChickenSoup();
-    } catch (ApiException e) {
-        throw new ApiException(e.getCode(), e.getMessage());
-    }
-    return ResultUtils.success(poisonousChickenSoup);
-}
-```
-
-响应示例：
-
-```json
-{
-  "code": 0,
-  "data": {
-    "text": "人类三大错觉—手机响了，有人敲门，他（她）喜欢我。"
-  },
-  "message": "ok"
 }
 ```
