--- a/docs/01.指南/02.API接口/02.获取IP信息归属地.md
+++ b/docs/01.指南/02.API接口/02.获取IP信息归属地.md
@@ -15,7 +15,7 @@ article: false
 ### 请求地址
 
 ```shell
-https://gateway.qimuu.icu/api/ipInfo
+https://gateway.suki.vin/api/interface/ipInfo
 ```
 
 ### 请求参数
@@ -82,54 +82,17 @@ public ResultResponse getIpInfo(IpInfoParams ipInfoParams) {
 }
 ```
 
-- **示例二：推荐 👍**
-
-**搭配[EasyWeb](https://github.com/qimu666/EasyWeb)快速开发 Web 项目**
-
-```java
-@GetMapping("/ipInfo")
-public BaseResponse<ResultResponse> getIpInfoEasyWeb(IpInfoParams ipInfoParams) {
-    ResultResponse resultResponse;
-    try {
-        IpInfoRequest ipInfoRequest = new IpInfoRequest();
-        ipInfoRequest.setRequestParams(ipInfoParams);
-        resultResponse = apiService.getIpInfo(ipInfoRequest);
-    } catch (ApiException e) {
-        throw new BusinessException(e.getCode(), e.getMessage());
-    }
-    return ResultUtils.success(resultResponse);
-}
-```
-
-**响应示例：**
-
-```json
-{
-  "code": 0,
-  "data": {
-    "ip": "58.154.0.0",
-    "info": {
-      "country": "中国",
-      "prov": "辽宁",
-      "city": "沈阳市",
-      "lsp": "教育网/沈阳建筑大学"
-    }
-  },
-  "message": "ok"
-}
-```
-
-- 示例三：
+- 示例二：
 
 ```Java
 @GetMapping("/ipInfo")
 public ResultResponse getIpInfo(IpInfoParams ipInfoParams) {
-    ApiClient qiApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
+    ApiClient ApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
     ResultResponse resultResponse;
     try {
         IpInfoRequest ipInfoRequest = new IpInfoRequest();
         ipInfoRequest.setRequestParams(ipInfoParams);
-        resultResponse = apiService.getIpInfo(qiApiClient, ipInfoRequest);
+        resultResponse = apiService.getIpInfo(ApiClient, ipInfoRequest);
     } catch (ApiException e) {
         throw new BusinessException(e.getCode(), e.getMessage());
     }
