--- a/docs/01.指南/02.API接口/03.随机土味情话.md
+++ b/docs/01.指南/02.API接口/03.随机土味情话.md
@@ -15,7 +15,7 @@ article: false
 ### 请求地址
 
 ```shell
-https://gateway.qimuu.icu/api/loveTalk
+https://gateway.suki.vin/api/interface/loveTalk
 ```
 
 ### 请求参数
@@ -70,44 +70,15 @@ public LoveResponse getLoveTalk() {
 }
 ```
 
-- **示例二：推荐 👍**
-
-**搭配[EasyWeb](https://github.com/qimu666/EasyWeb)快速开发 Web 项目**
-
-```java
-@GetMapping("/loveTalk/easyWeb")
-public BaseResponse<LoveResponse> getLoveTalkEasyWeb() {
-    LoveResponse loveResponse;
-    try {
-        loveResponse = apiService.randomLoveTalk();
-    } catch (ApiException e) {
-        throw new BusinessException(e.getCode(), e.getMessage());
-    }
-    return ResultUtils.success(loveResponse);
-}
-```
-
-**响应示例：**
-
-```json
-{
-  "code": 0,
-  "data": {
-    "value": "盛意以山河，山河不及你。"
-  },
-  "message": "ok"
-}
-```
-
-- 示例三：
+- 示例二：
 
 ```Java
 @GetMapping("/loveTalk/setKey")
 public LoveResponse getLoveTalkSetKey() {
     LoveResponse loveResponse;
     try {
-        ApiClient qiApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
-        loveResponse = apiService.randomLoveTalk(qiApiClient);
+        ApiClient ApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
+        loveResponse = apiService.randomLoveTalk(ApiClient);
     } catch (ApiException e) {
         throw new BusinessException(e.getCode(), e.getMessage());
     }
