--- a/docs/01.指南/02.API接口/05.获取天气信息.md
+++ b/docs/01.指南/02.API接口/05.获取天气信息.md
@@ -15,7 +15,7 @@ article: false
 ### 请求地址
 
 ```shell
-https://gateway.qimuu.icu/api/weather
+https://gateway.suki.vin/api/interface/weather
 ```
 
 ### 请求参数
@@ -120,74 +120,17 @@ public ResultResponse getWeatherInfo(WeatherParams weatherParams) {
 }
 ```
 
-- **示例二：推荐 👍**
-
-**搭配[EasyWeb](https://github.com/qimu666/EasyWeb)快速开发 Web 项目**
-
-```java
-@GetMapping("/weatherInfo/EasyWeb")
-public BaseResponse<ResultResponse> getWeatherInfoEasyWeb(WeatherParams weatherParams) {
-    ResultResponse resultResponse;
-    try {
-        WeatherRequest weatherRequest = new WeatherRequest();
-        weatherRequest.setRequestParams(weatherParams);
-        resultResponse = apiService.getWeatherInfo(weatherRequest);
-    } catch (ApiException e) {
-        throw new BusinessException(e.getCode(), e.getMessage());
-    }
-    return ResultUtils.success(resultResponse);
-}
-```
-
-**响应示例：**
-
-```json
-{
-  "code": 0,
-  "data": {
-    "city": "驻马店市",
-    "info": {
-      "date": "2023-09-23",
-      "week": "星期六",
-      "type": "中雨",
-      "low": "15°C",
-      "high": "19°C",
-      "fengxiang": "东风",
-      "fengli": "4级",
-      "night": {
-        "type": "中雨",
-        "fengxiang": "东北风",
-        "fengli": "4级"
-      },
-      "air": {
-        "aqi": 26,
-        "aqi_level": 1,
-        "aqi_name": "优",
-        "co": "0",
-        "no2": "7",
-        "o3": "83",
-        "pm10": "12",
-        "pm2.5": "14",
-        "so2": "6"
-      },
-      "tip": "下小雨了，出门记得带伞~ 现在的温度比较凉爽~"
-    }
-  },
-  "message": "ok"
-}
-```
-
-- 示例三：
+- 示例二：
 
 ```Java
 @GetMapping("/weatherInfo/setKey")
 public ResultResponse getWeatherInfoSetKey(WeatherParams weatherParams) {
     ResultResponse resultResponse;
-    ApiClient qiApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
+    ApiClient ApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
     try {
         WeatherRequest weatherRequest = new WeatherRequest();
         weatherRequest.setRequestParams(weatherParams);
-        resultResponse = apiService.getWeatherInfo(qiApiClient, weatherRequest);
+        resultResponse = apiService.getWeatherInfo(ApiClient, weatherRequest);
     } catch (ApiException e) {
         throw new BusinessException(e.getCode(), e.getMessage());
     }
