--- a/docs/01.指南/02.API接口/06.随机壁纸.md
+++ b/docs/01.指南/02.API接口/06.随机壁纸.md
@@ -15,7 +15,7 @@ article: false
 ### 请求地址
 
 ```shell
-https://gateway.qimuu.icu/api/randomWallpaper
+https://gateway.suki.vin/api/interface/randomWallpaper
 ```
 
 ### 请求参数
@@ -73,48 +73,17 @@ public ResultResponse getRandomWallpaper(RandomWallpaperParams randomWallpaperPa
 }
 ```
 
-- **示例二：推荐 👍**
-
-**搭配[EasyWeb](https://github.com/qimu666/EasyWeb)快速开发 Web 项目**
-
-```java
-@GetMapping("/randomWallpaper/easyWeb")
-public BaseResponse<ResultResponse> getRandomWallpaperEasyWeb(RandomWallpaperParams randomWallpaperParams) {
-    ResultResponse resultResponse;
-    try {
-        RandomWallpaperRequest randomWallpaperRequest = new RandomWallpaperRequest();
-        randomWallpaperRequest.setRequestParams(randomWallpaperParams);
-        resultResponse = apiService.getRandomWallpaper(randomWallpaperRequest);
-    } catch (ApiException e) {
-        throw new BusinessException(e.getCode(), e.getMessage());
-    }
-    return ResultUtils.success(resultResponse);
-}
-```
-
-**响应示例：**
-
-```json
-{
-  "code": 0,
-  "data": {
-    "imgurl": "https://img.btstu.cn/api/images/5b35a4886fd85.jpg"
-  },
-  "message": "ok"
-}
-```
-
-- 示例三：
+- 示例二：
 
 ```Java
 @GetMapping("/randomWallpaper/setKey")
 public ResultResponse getRandomWallpaperSetKey(RandomWallpaperParams randomWallpaperParams) {
     ResultResponse resultResponse;
-    ApiClient qiApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
+    ApiClient ApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
     try {
         RandomWallpaperRequest randomWallpaperRequest = new RandomWallpaperRequest();
         randomWallpaperRequest.setRequestParams(randomWallpaperParams);
-        resultResponse = apiService.getRandomWallpaper(qiApiClient, randomWallpaperRequest);
+        resultResponse = apiService.getRandomWallpaper(ApiClient, randomWallpaperRequest);
     } catch (ApiException e) {
         throw new BusinessException(e.getCode(), e.getMessage());
     }
