--- a/docs/02.配置/01.配置/01.使用配置.md
+++ b/docs/02.配置/01.配置/01.使用配置.md
@@ -23,16 +23,16 @@ article: false
 
 ```xml
 <dependency>
-    <groupId>icu.qimuu</groupId>
+    <groupId>vin.suki</groupId>
     <artifactId>api-sdk</artifactId>
-    <version>0.0.4</version>
+    <version>1.0</version>
 </dependency>
 ```
 
 ### 🍐Gradle
 
 ```
-implementation group: 'icu.qimuu', name: 'api-sdk', version: '0.0.4'
+implementation group: 'vin.suki', name: 'api-sdk', version: '1.0'
 ```
 
 ### ` access-key、secret-key`
