--- a/docs/01.指南/01.指南/02.安装.md
+++ b/docs/01.指南/01.指南/02.安装.md
@@ -19,14 +19,14 @@ article: false
 
 ```xml
 <dependency>
-    <groupId>icu.qimuu</groupId>
+    <groupId>vin.suki</groupId>
     <artifactId>api-sdk</artifactId>
-    <version>0.0.4</version>
+    <version>1.0</version>
 </dependency>
 ```
 
 ### 🍐Gradle
 
 ```
-implementation group: 'icu.qimuu', name: 'api-sdk', version: '0.0.4'
+implementation group: 'vin.suki', name: 'api-sdk', version: '1.0'
 ```
