--- a/docs/01.指南/02.API接口/01.随机毒鸡汤.md
+++ b/docs/01.指南/02.API接口/01.随机毒鸡汤.md
@@ -1,5 +1,5 @@
 ---
-title: 随机毒鸡汤
+title: 诙谐语录
 date: 2023-09-09 23:13:43
 permalink: /pages/1705234447153963010/
 article: false
@@ -15,7 +15,7 @@ article: false
 ### 请求地址
 
 ```shell
-https://gateway.qimuu.icu/api/poisonousChickenSoup
+https://gateway.suki.vin/api/interface/poisonousChickenSoup
 ```
 
 ### 请求参数
@@ -26,11 +26,11 @@ https://gateway.qimuu.icu/api/poisonousChickenSoup
 
 ### 响应参数
 
-| 参数名称  |  类型  |    描述    |
-| :-------: | :----: | :--------: |
-|   code    |  int   |   响应码   |
-| data.text | string | 随机毒鸡汤 |
-|  message  | string |  响应描述  |
+| 参数名称  |  类型  |   描述   |
+| :-------: | :----: | :------: |
+|   code    |  int   |  响应码  |
+| data.text | string | 诙谐语录 |
+|  message  | string | 响应描述 |
 
 ### 代码示例
 
@@ -70,44 +70,14 @@ public PoisonousChickenSoupResponse getPoisonousChickenSoup() {
 }
 ```
 
-- **示例二：推荐 👍**
-
-**搭配[EasyWeb](https://github.com/qimu666/EasyWeb)快速开发 Web 项目**
-
-```java
-@GetMapping("/getPoisonousChickenSoup")
-public BaseResponse<PoisonousChickenSoupResponse> getPoisonousChickenSoup() {
-    PoisonousChickenSoupResponse poisonousChickenSoup = null;
-    try {
-        poisonousChickenSoup = apiService.getPoisonousChickenSoup();
-        System.out.println("poisonousChickenSoup = " + poisonousChickenSoup);
-    } catch (ApiException e) {
-        throw new com.qimuu.easyweb.exception.BusinessException(e.getCode(), e.getMessage());
-    }
-    return ResultUtils.success(poisonousChickenSoup);
-}
-```
-
-**响应示例：**
-
-```json
-{
-  "code": 0,
-  "data": {
-    "text": "你不用心去谈一次恋爱，你就永远不知道，这到底有多浪费时间。"
-  },
-  "message": "ok"
-}
-```
-
-- 示例三：
+- 示例二：
 
 ```Java
 public PoisonousChickenSoupResponse getPoisonousChickenSoup() {
-    ApiClient qiApiClient = new ApiClient("您的AccessKey", "您的SecretKey");
+    ApiClient ApiClient = new ApiClient("您的AccessKey", "您的SecretKey");
     PoisonousChickenSoupResponse poisonousChickenSoup = null;
     try {
-        poisonousChickenSoup = apiService.getPoisonousChickenSoup(qiApiClient);
+        poisonousChickenSoup = apiService.getPoisonousChickenSoup(ApiClient);
         System.out.println("poisonousChickenSoup = " + poisonousChickenSoup);
     } catch (ApiException e) {
         log.error(e.getMessage());
@@ -116,13 +86,13 @@ public PoisonousChickenSoupResponse getPoisonousChickenSoup() {
 }
 ```
 
-- 示例四：
+- 示例三：
 
 ```java
-public PoisonousChickenSoupResponse getPoisonousChickenSoup(ApiClient qiApiClient) {
+public PoisonousChickenSoupResponse getPoisonousChickenSoup(ApiClient ApiClient) {
     PoisonousChickenSoupResponse poisonousChickenSoup = null;
     try {
-        poisonousChickenSoup = apiService.getPoisonousChickenSoup(qiApiClient);
+        poisonousChickenSoup = apiService.getPoisonousChickenSoup(ApiClient);
         System.out.println("poisonousChickenSoup = " + poisonousChickenSoup);
     } catch (ApiException e) {
         log.error(e.getMessage());
