--- a/docs/01.指南/02.API接口/04.每日星座运势.md
+++ b/docs/01.指南/02.API接口/04.每日星座运势.md
@@ -15,7 +15,7 @@ article: false
 ### 请求地址
 
 ```shell
-https://gateway.qimuu.icu/api/horoscope
+https://gateway.suki.vin/api/interface/horoscope
 ```
 
 ### 请求参数
@@ -84,7 +84,7 @@ public ResultResponse getHoroscope(HoroscopeParams horoscopeParams) {
         horoscopeRequest.setRequestParams(horoscopeParams);
         horoscope = apiService.horoscope(horoscopeRequest);
     } catch (ApiException e) {
-        throw new com.qimuu.easyweb.exception.BusinessException(e.getCode(), e.getMessage());
+        throw new BusinessException(e.getCode(), e.getMessage());
     }
     return horoscope;
 }
@@ -129,81 +129,19 @@ public ResultResponse getHoroscope(HoroscopeParams horoscopeParams) {
 }
 ```
 
-- **示例二：推荐 👍**
-
-**搭配[EasyWeb](https://github.com/qimu666/EasyWeb)快速开发 Web 项目**
-
-```java
-@GetMapping("/getHoroscopeEasyWeb")
-public BaseResponse<ResultResponse> getHoroscopeEasyWeb(HoroscopeParams horoscopeParams) {
-    ResultResponse horoscope;
-    try {
-        HoroscopeRequest horoscopeRequest = new HoroscopeRequest();
-        horoscopeRequest.setRequestParams(horoscopeParams);
-        horoscope = apiService.horoscope(horoscopeRequest);
-    } catch (ApiException e) {
-        throw new com.qimuu.easyweb.exception.BusinessException(e.getCode(), e.getMessage());
-    }
-    return ResultUtils.success(horoscope);
-}
-```
-
-**响应示例：**
-
-```json
-{
-  "code": 0,
-  "data": {
-    "todo": {
-      "yi": "开拓视野",
-      "ji": "心浮气躁"
-    },
-    "fortunetext": {
-      "all": "整体运势稍微有些起伏，需要警惕横冲直撞的鲁莽行为，以免带来负面的影响。暂时不宜急着做决定，或许有一些卡在前面的难题需要你耗费脑筋进行思考，也可能会一时拿不定主意。当前的你需要思考和调整，才能迈向更好的状态，也要更加理性和成熟地处理人际关系问题。",
-      "love": "单身的会觉得很孤独和失落，只是还未是缘分到来的时候而已。已有伴者，可能会出现沟通不畅和误解，建议你多一些耐心和理解，用心去维系你们的感情。",
-      "work": "事业和学业可能会比较平淡，可能还要面临一些两难的抉择与考验，建议打醒精神应对，保持灵活应变的准备，不要总是等到问题到来之后才去亡羊补牢。",
-      "money": "可能会有一些花费或出现消费需求，但不会带来太大的压力。在购物方面，注意控制自己的欲望不要盲目消费。如果有小的投资机会，可以考虑适当参与，但要做好风险评估。",
-      "health": "特别注意保护眼睛和呼吸系统的健康，长期使用电子产品或待在空调房间可能会导致眼睛干涩和不适，适量休息眼睛，多眨眼，用眼保健操缓解眼部疲劳。"
-    },
-    "fortune": {
-      "all": 3,
-      "love": 3,
-      "work": 2,
-      "money": 3,
-      "health": 3
-    },
-    "shortcomment": "进行思考与调整",
-    "luckycolor": "蓝",
-    "index": {
-      "all": "69%",
-      "love": "58%",
-      "work": "52%",
-      "money": "70%",
-      "health": "68%"
-    },
-    "luckynumber": "9",
-    "time": "9月23日",
-    "title": "双子座",
-    "type": "今日运势",
-    "luckyconstellation": "巨蟹座"
-  },
-  "message": "ok"
-}
-```
-
-- 示例三：
+- 示例二：
 
 ```Java
 @GetMapping("/getHoroscope/setKey")
 public ResultResponse getHoroscopeSetKey(HoroscopeParams horoscopeParams) {
     ResultResponse horoscope;
-    ApiClient qiApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
+    ApiClient ApiClient = new ApiClient("7052a8594339a519e0ba5eb04a267a60", "d8d6df60ab209385a09ac796f1dfe3e1");
     try {
         HoroscopeRequest horoscopeRequest = new HoroscopeRequest();
         horoscopeRequest.setRequestParams(horoscopeParams);
-        horoscope = apiService.horoscope(qiApiClient, horoscopeRequest);
+        horoscope = apiService.horoscope(ApiClient, horoscopeRequest);
     } catch (ApiException e) {
-        throw new com.qimuu.easyweb.exception.BusinessException(e.getCode(), e.getMessage());
+        throw new BusinessException(e.getCode(), e.getMessage());
     }
     return horoscope;
 }
